--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@
 spring.datasource.jdbc-url=postgres://fl0user:WduYn04BxsLa@ep-fancy-darkness-12855267.us-east-2.aws.neon.fl0.io:5432/bdd-proyectos?sslmode=require
 spring.datasource.username=fl0user
 spring.datasource.password=WduYn04BxsLa
-#server.port= 8080
+server.port= 8080
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
