--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.postgresql:postgresql:42.2.27'
+	implementation 'com.google.code.gson:gson:2.8.9'
+	implementation 'mysql:mysql-connector-java:8.0.26'
 
 	compile group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
 	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
