--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:postgresql://ep-fancy-darkness-12855267.us-east-2.aws
 spring.datasource.username=fl0user
 spring.datasource.password=WduYn04BxsLa
 spring.datasource.driverClassName=org.postgresql.Driver
+server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
