--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,11 @@ spring.datasource.driverClassName=org.postgresql.Driver
 server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.hibernate.SQL=DEBUG
+spring.h2.console.enabled=true
 spring.datasource.initialize=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 #spring.datasource.url=jdbc:h2:mem:DBNAME
 #spring.datasource.username=root
