--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url=jdbc:postgresql://ep-fancy-darkness-12855267.us-east-2.aws.neon.fl0.io:5432/bdd-proyectos?sslmode=require
+#spring.datasource.url=jdbc:postgresql://ep-fancy-darkness-12855267.us-east-2.aws.neon.fl0.io:5432/bdd-proyectos?sslmode=require
+#spring.datasource.username=fl0user
+#spring.datasource.password=WduYn04BxsLa
+#spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://ep-icy-rain-51088397.us-east-2.aws.neon.fl0.io:5432/proyectos-database?sslmode=require
 spring.datasource.username=fl0user
-spring.datasource.password=WduYn04BxsLa
+spring.datasource.password=GLl5mKk4Nnya
 spring.datasource.driverClassName=org.postgresql.Driver
 server.port=8080
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
